Defines rating service and structure for API to get rating of a resource
This adds rating service, which has an endpoint GET `/resource/<id>/rating`
which would returns user's rating of a resource. The user's jwt would be
necessary for a user to access api.

Closes: #60
