# api/gen/http/openapi3.yaml
@@ -38,8 +38,8 @@ paths:
         schema:
           type: string
           description: OAuth Authorization code of User
-          example: Assumenda aut accusamus.
-        example: Dignissimos omnis eaque maiores ipsa.
+          example: Illum et ut pariatur similique.
+        example: Laudantium nostrum quia totam magni reprehenderit maxime.
       responses:
         "200":
           description: ""
@@ -48,7 +48,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuthenticateResponseBody'
               example:
-                token: Ea rerum qui.
+                token: Minus non.
         "400":
           description: ""
           content:
@@ -60,8 +60,8 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
-                timeout: true
+                temporary: false
+                timeout: false
         "500":
           description: ""
           content:
@@ -69,11 +69,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: true
+                fault: false
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
+                temporary: false
                 timeout: false
   /categories:
     get:
@@ -106,14 +106,21 @@ paths:
                     name: image-build
                   - id: 2
                     name: kaniko
-              example:
-              - id: 1
-                name: Image Builder
-                tags:
                 - id: 1
-                  name: image-build
-                - id: 2
-                  name: kaniko
+                  name: Image Builder
+                  tags:
+                  - id: 1
+                    name: image-build
+                  - id: 2
+                    name: kaniko
+                - id: 1
+                  name: Image Builder
+                  tags:
+                  - id: 1
+                    name: image-build
+                  - id: 2
+                    name: kaniko
+              example:
               - id: 1
                 name: Image Builder
                 tags:
@@ -146,8 +153,8 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
-                timeout: false
+                temporary: false
+                timeout: true
   /query:
     get:
       tags:
@@ -164,8 +171,8 @@ paths:
           type: string
           description: Name of resource
           default: ""
-          example: Sit unde cum laborum.
-        example: Quam perspiciatis sed.
+          example: Velit itaque dolores dolor esse.
+        example: Velit aliquid praesentium saepe sed optio ab.
       - name: type
         in: query
         description: Type of resource
@@ -174,12 +181,12 @@ paths:
           type: string
           description: Type of resource
           default: ""
-          example: pipeline
+          example: task
           enum:
           - task
           - pipeline
           - ""
-        example: ""
+        example: pipeline
       - name: limit
         in: query
         description: Maximum number of resources to be returned
@@ -188,8 +195,8 @@ paths:
           type: integer
           description: Maximum number of resources to be returned
           default: 100
-          example: 17551049491690359883
-        example: 14118214836474956864
+          example: 4816152592242947716
+        example: 18258145598197439368
       responses:
         "200":
           description: ""
@@ -281,7 +288,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
@@ -298,7 +305,7 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: false
+                temporary: true
                 timeout: false
   /resource/{id}:
     get:
@@ -315,8 +322,8 @@ paths:
         schema:
           type: integer
           description: ID of a resource
-          example: 6492001352557683279
-        example: 6396411263354939537
+          example: 277976066277772218
+        example: 4594134182574131441
       responses:
         "200":
           description: ""
@@ -356,7 +363,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: true
+                fault: false
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
@@ -373,8 +380,77 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
+                temporary: false
+                timeout: false
+  /resource/{id}/rating:
+    get:
+      tags:
+      - rating
+      summary: Get rating
+      description: Find user's rating for a resource
+      operationId: rating#Get
+      parameters:
+      - name: id
+        in: path
+        description: ID of a resource
+        required: true
+        schema:
+          type: integer
+          description: ID of a resource
+          example: 5425868395561207333
+        example: 12981034148169090095
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetResponseBody'
+              example:
+                rating: 14236020767980603451
+        "401":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
                 temporary: true
-                timeout: true
+                timeout: false
+        "403":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: true
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: false
+                timeout: false
+        "500":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: false
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: false
+                timeout: false
+      security:
+      - jwt_header_Authorization:
+        - api:read
+        - api:write
   /resource/{id}/versions:
     get:
       tags:
@@ -390,8 +466,8 @@ paths:
         schema:
           type: integer
           description: ID of a resource
-          example: 8460582184549408205
-        example: 6569334773012847900
+          example: 14206068330937361518
+        example: 9278209374305324459
       responses:
         "200":
           description: ""
@@ -421,12 +497,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
-                timeout: true
+                temporary: false
+                timeout: false
         "500":
           description: ""
           content:
@@ -438,8 +514,8 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: false
-                timeout: false
+                temporary: true
+                timeout: true
   /resource/{type}/{name}:
     get:
       tags:
@@ -455,11 +531,11 @@ paths:
         schema:
           type: string
           description: Type of resource
-          example: pipeline
+          example: task
           enum:
           - task
           - pipeline
-        example: task
+        example: pipeline
       - name: name
         in: path
         description: Name of resource
@@ -467,8 +543,8 @@ paths:
         schema:
           type: string
           description: Name of resource
-          example: Similique ullam laudantium.
-        example: Quia totam.
+          example: Enim tenetur voluptatem inventore quis consequatur mollitia.
+        example: Neque similique ipsam ad.
       responses:
         "200":
           description: ""
@@ -564,8 +640,8 @@ paths:
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
-                timeout: true
+                temporary: false
+                timeout: false
         "500":
           description: ""
           content:
@@ -573,12 +649,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: false
-                timeout: false
+                temporary: true
+                timeout: true
   /resource/{type}/{name}/{version}:
     get:
       tags:
@@ -594,7 +670,7 @@ paths:
         schema:
           type: string
           description: type of resource
-          example: pipeline
+          example: task
           enum:
           - task
           - pipeline
@@ -606,8 +682,8 @@ paths:
         schema:
           type: string
           description: name of resource
-          example: Eaque necessitatibus magni quia.
-        example: Perferendis suscipit voluptatem est.
+          example: Non molestiae illo aut numquam.
+        example: Sunt voluptas.
       - name: version
         in: path
         description: version of resource
@@ -615,8 +691,8 @@ paths:
         schema:
           type: string
           description: version of resource
-          example: Rerum autem dolores at.
-        example: Aliquam voluptates illo.
+          example: Non illo accusantium aut iste.
+        example: Similique temporibus sequi est nihil facilis adipisci.
       responses:
         "200":
           description: ""
@@ -651,11 +727,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: true
+                fault: false
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
-                temporary: true
+                temporary: false
                 timeout: true
         "500":
           description: ""
@@ -664,7 +740,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               example:
-                fault: false
+                fault: true
                 id: 123abc
                 message: parameter 'p' must be an integer
                 name: bad_request
@@ -685,8 +761,8 @@ paths:
         schema:
           type: integer
           description: Version ID of a resource's version
-          example: 2918491907901676703
-        example: 16837229221636600385
+          example: 16407917347360994554
+        example: 7298831997785427173
       responses:
         "200":
           description: ""
@@ -756,8 +832,8 @@ paths:
           type: integer
           description: Maximum number of resources to be returned
           default: 100
-          example: 6499187506722085457
-        example: 10128758337029638897
+          example: 2173913504320892407
+        example: 11955901261353982503
       responses:
         "200":
           description: ""
@@ -854,7 +930,7 @@ paths:
                 message: parameter 'p' must be an integer
                 name: bad_request
                 temporary: false
-                timeout: false
+                timeout: true
   /swagger/swagger.json:
     get:
       tags:
@@ -873,9 +949,9 @@ components:
         token:
           type: string
           description: JWT
-          example: Iusto et dolor vitae voluptatem.
+          example: Quia illum perferendis suscipit voluptatem est quae.
       example:
-        token: Eum minus reiciendis nulla.
+        token: Autem dolores at.
       required:
       - token
     ByIDResponseBody:
@@ -1101,7 +1177,7 @@ components:
         temporary:
           type: boolean
           description: Is the error temporary?
-          example: false
+          example: true
         timeout:
           type: boolean
           description: Is the error a timeout?
@@ -1112,8 +1188,8 @@ components:
         id: 123abc
         message: parameter 'p' must be an integer
         name: bad_request
-        temporary: true
-        timeout: true
+        temporary: false
+        timeout: false
       required:
       - name
       - id
@@ -1121,6 +1197,17 @@ components:
       - temporary
       - timeout
       - fault
+    GetResponseBody:
+      type: object
+      properties:
+        rating:
+          type: integer
+          description: User rating for resource
+          example: 8427930225370483321
+      example:
+        rating: 16912924770328316859
+      required:
+      - rating
     Resource:
       type: object
       properties:
@@ -1573,3 +1660,8 @@ components:
       required:
       - latest
       - versions
+  securitySchemes:
+    jwt_header_Authorization:
+      type: http
+      description: Secures endpoint by requiring a valid JWT retrieved via the /auth/login endpoint.
+      scheme: bearer
